Fixed horizontal overflow

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,3 +1,12 @@
+html,
+body {
+	height: auto;
+}
+
+.main {
+	max-width: 100%;
+}
+
 #navbar {
 	width: 100%;
 	height: 10vh;
@@ -10,6 +19,7 @@
 
 .container {
 	height: auto;
+	width: 100%;
 	background-color: rgb(40, 40, 40);
 	display: flex;
 	flex-flow: column;
@@ -20,6 +30,7 @@
 .card-container {
 	display: grid;
 	padding: 2rem 0;
+	max-width: 100%;
 }
 
 .card {
@@ -86,6 +97,8 @@
 	justify-content: center;
 	align-items: flex-start;
 	flex-wrap: wrap;
+	max-width: 100%;
+	height: auto;
 }
 
 .india-card {
